# dsci524-group18

./: CONDUCT.rst  CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  deploy.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: eda_utils_py.rst  modules.rst
eda_utils_py/: eda_utils_py.py  utils.py
tests/: test_eda_utils_py.py
