[tool.poetry]
name = "eda_utils_py"
version = "0.1.25"
description = "Python package that contains util functions for eda process"
authors = ["Chuang Wang <chuangw.sde@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
Sphinx = "^3.5.1"
sphinxcontrib-napoleon = "^0.7"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
python-semantic-release = "^7.15.0"
nbsphinx = "^0.8.2"
ipykernel = "^5.5.0"
altair = "^4.1.0"
pandas = "^1.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "eda_utils_py/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"
